lints.workspace = true

[package]
name = "gix-protocol"
version = "0.59.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for implementing git protocols"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*", "!/tests/**/*"]
rust-version = "1.82"

[lib]
doctest = false

[features]

#! ### _Mutually exclusive client _
#! The _client_ portion of the protocol uses `gix-transport` to communicate to a server. For it to be available, one of the following features must
#! be selected.
#!
#! Specifying both causes a compile error, preventing the use of `--all-features`.

## If set, blocking command implementations are available and will use the blocking version of the `gix-transport` crate.
blocking-client = [
    "gix-transport/blocking-client",
    "maybe-async/is_sync",
    "handshake",
    "fetch"
]
## As above, but provides async implementations instead.
# no `dep:` for futures-lite (https://github.com/rust-secure-code/cargo-auditable/issues/124)
async-client = [
    "gix-transport/async-client",
    "dep:async-trait",
    "dep:futures-io",
    "futures-lite",
    "handshake",
    "fetch"
]

## Add implementations for performing a `handshake` along with the dependencies needed for it.
handshake = ["dep:gix-credentials"]

## Add implementations for performing a `fetch` (for packs) along with the dependencies needed for it.
fetch = [
    "dep:gix-negotiate",
    "dep:gix-object",
    "dep:gix-revwalk",
    "dep:gix-lock",
    "dep:gix-refspec",
    "dep:gix-trace",
]

## Add client-side primitives for performing a `push`: ref-update `Command`
## serialization, `Arguments` capability negotiation, blocking + async
## `send` that streams command lines plus the pack writer, and
## `response::from_reader` with side-band demux + typed
## `Outcome::{is_success, accepted_count, rejected_count, command_statuses}`
## helpers over the parsed `report-status` / `report-status-v2` variants.
push = []

## Add server-side primitives for `git-upload-pack`: parsing a v2
## `command=fetch` / `command=ls-refs` request, the v0/v1 stateless
## `want`/`have`/`done` state machine, the `ls-refs` / `fetch`
## advertisements, `ack` / `packfile` section emitters, and a `serve_v2`
## / `serve_v1` dispatch that reads pkt-lines and drives a caller-owned
## object store + pack writer.
upload-pack-server = ["dep:gix-packetline", "gix-packetline/blocking-io"]

## Add server-side primitives for `git-receive-pack`: advertisement of
## current refs + push capabilities, parsing of the framed update-request
## (old/new-oid + refname + inline caps + optional `shallow <oid>` and
## `push-cert` block), atomic multi-update dispatch with caller-supplied
## hooks and atomic-all-or-nothing semantics, and v1/v2 `report-status`
## serialisation. Reuses the `push` feature for the shared `Command` /
## `Report` / `CommandStatus` types.
receive-pack-server = ["push", "dep:gix-packetline", "gix-packetline/blocking-io"]

#! ### Other
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-transport/serde", "gix-hash/serde", "gix-shallow/serde"]

[[test]]
name = "blocking"
path = "tests/blocking-protocol.rs"
required-features = ["blocking-client"]

[[test]]
name = "async"
path = "tests/async-protocol.rs"
required-features = ["async-client"]

[[test]]
name = "push-receive-roundtrip"
path = "tests/push-receive-roundtrip.rs"
required-features = ["push", "upload-pack-server", "receive-pack-server", "blocking-client", "sha1"]

[dependencies]
gix-features = { version = "^0.46.2", path = "../gix-features", features = [
    "progress",
] }
gix-transport = { version = "^0.55.1", path = "../gix-transport" }
gix-hash = { version = "^0.23.0", path = "../gix-hash" }
gix-shallow = { version = "^0.10.0", path = "../gix-shallow" }
gix-date = { version = "^0.15.1", path = "../gix-date" }
gix-utils = { version = "^0.3.1", path = "../gix-utils" }
gix-ref = { version = "^0.61.0", path = "../gix-ref" }

gix-trace = { version = "^0.1.18", path = "../gix-trace", optional = true }
gix-negotiate = { version = "^0.29.0", path = "../gix-negotiate", optional = true }
gix-object = { version = "^0.58.0", path = "../gix-object", optional = true }
gix-revwalk = { version = "^0.29.0", path = "../gix-revwalk", optional = true }
gix-credentials = { version = "^0.37.1", path = "../gix-credentials", optional = true }
gix-refspec = { version = "^0.39.0", path = "../gix-refspec", optional = true }
gix-lock = { version = "^21.0.0", path = "../gix-lock", optional = true }
gix-packetline = { version = "^0.21.2", path = "../gix-packetline", optional = true }

thiserror = "2.0.18"
nonempty = "0.12.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }
bstr = { version = "1.12.0", default-features = false, features = [
    "std",
    "unicode",
] }
winnow = { version = "1.0.0", features = ["simd"] }

# for async-client
async-trait = { version = "0.1.51", optional = true }
futures-io = { version = "0.3.32", optional = true }
futures-lite = { version = "2.1.0", optional = true }
maybe-async = "0.2.6"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
gix-packetline = { path = "../gix-packetline", version = "^0.21.2" }
gix-hash = { path = "../gix-hash", features = ["sha1"] }

[package.metadata.docs.rs]
features = ["sha1", "blocking-client", "document-features", "serde"]
